# voxel

./: Cargo.toml
src/: learn.rs  main.rs
src/models/: chunk.rs  cube.rs  mod.rs
src/opengl/: buffer.rs  mesh.rs  mod.rs
