[package]
name = "vox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2", features = ["debug_error_checks"]}
ultraviolet = "0.7"

# these should be dev dependencies, but i use the bin directory
# during dev so they live here, except during a crates.io release
beryllium = "0.2.0-alpha.4"
imagine = "0.0.5"

[dev-dependencies]